rather than negative z-index on header and footer, form now has a high z-index for top render. box shadow fixed. html cleaner after mini troubleshoots

--- a/sign-up-form.css
+++ b/sign-up-form.css
@@ -61,6 +61,7 @@ form {
     padding-left: 2vw;
     background-color: white;
     box-shadow: 0px 1px 10px rgba(0, 0, 1, 0.2);
+    z-index: 999;
 }
 
 .grid-container {
